--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>say-no-to-excel</title>
     <script src="assets/jquery/jquery-2.1.0.js"></script>
     <script src="assets/jquery/jquery-ui-1.10.4.custom.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.js"></script>
+    <script src="assets/bootstrap3/js/bootstrap.js"></script>
     <!--<script src="assets/bootstrap/js/bootstrap-editable.js"></script>-->
     <script src="assets/jquery/handsontable/jquery.handsontable.full.js"></script>
     <!--<script src="js/jquery-ui.custom.min.js"></script>-->
@@ -21,7 +21,7 @@
     <!--<link rel="stylesheet" media="screen" href="css/ui-bootstrap/jquery-ui.custom.css">
      <link rel="stylesheet" media="screen" href="css/smoothness/jquery-ui.custom.css"> -->
     <link rel="stylesheet" media="screen" href="assets/jquery/handsontable/jquery.handsontable.full.css">
-    <link rel="stylesheet" media="screen" href="assets/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" media="screen" href="assets/bootstrap3/css/bootstrap.css">
     <!--<link rel="stylesheet" media="screen" href="assets/bootstrap/css/bootstrap-editable.css">-->
     <link rel="stylesheet" media="screen" href="css/snte.css">
   </head>
@@ -30,54 +30,58 @@
       <div id="snte-chrome-top" class="menu-area">
         <div id="snte-menubar-top" class="btn-toolbar" role="toolbar">
           <div class="btn-group">
-            <button type="button" class="btn btn-default" title="MSG-Undo"><span class="glyphicon glyphicon-arrow-left"></span>U</button>
-            <button type="button" class="btn btn-default" title="MSG-Redo"><span class="glyphicon glyphicon-share-alt"></span>R</button>
+            <button type="button" class="btn btn-default" title="MSG-Undo"><span class="glyphicon glyphicon-arrow-left"></span></button>
+            <button type="button" class="btn btn-default" title="MSG-Redo"><span class="glyphicon glyphicon-share-alt"></span></button>
           </div>
           <div class="btn-group">
             <button type="button" class="btn btn-default" title="MSG-Copy">C</button>
             <button type="button" class="btn btn-default" title="MSG-Paste">P</button>
           </div>
           <div class="btn-group">
-            <div class="btn-group">
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="MSG-Font">
-                Arial
+            <div class="btn-group" id="snte-menu-font-family">
+              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-value="Arial" title="MSG-Fontfamily" style="min-width:160px; text-align: left;">
+                <span class="value">Arial</span>
                 <span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="#">Arial</a></li>
-                <li><a href="#">Times New Roman</a></li>
+                <li><a href="#" data-value="Arial" style="font-family: Arial;">Arial</a></li>
+                <li><a href="#" data-value="Courier New" style="font-family: Courier New;">Courier New</a></li>
+                <li><a href="#" data-value="Georgia" style="font-family: Georgia;">Georgia</a></li>
+                <li><a href="#" data-value="Times New Roman" style="font-family: Times New Roman;">Times New Roman</a></li>
+                <li><a href="#" data-value="Trebuchet MS" style="font-family: Trebuchet MS;">Trebuchet MS</a></li>
+                <li><a href="#" data-value="Verdana" style="font-family: Verdana;">Verdana</a></li>
               </ul>
             </div>
-            <div class="btn-group">
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="MSG-Fontsize">
-                10
+            <div class="btn-group" id="snte-menu-font-size">
+              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-value="10" title="MSG-Fontsize" style="min-width:55px; text-align: left;">
+                <span class="value">10</span>
                 <span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="#">6</a></li>
-                <li><a href="#">7</a></li>
-                <li><a href="#">8</a></li>
-                <li><a href="#">9</a></li>
-                <li><a href="#">10</a></li>
-                <li><a href="#">11</a></li>
-                <li><a href="#">12</a></li>
-                <li><a href="#">14</a></li>
-                <li><a href="#">18</a></li>
-                <li><a href="#">24</a></li>
-                <li><a href="#">36</a></li>
+                <li><a href="#" data-value="6px">6</a></li>
+                <li><a href="#" data-value="7px">7</a></li>
+                <li><a href="#" data-value="8px">8</a></li>
+                <li><a href="#" data-value="9px">9</a></li>
+                <li><a href="#" data-value="10px">10</a></li>
+                <li><a href="#" data-value="11px">11</a></li>
+                <li><a href="#" data-value="12px">12</a></li>
+                <li><a href="#" data-value="14px">14</a></li>
+                <li><a href="#" data-value="18px">18</a></li>
+                <li><a href="#" data-value="24px">24</a></li>
+                <li><a href="#" data-value="36px">36</a></li>
               </ul>
             </div>
-            <div class="btn-group">
+            <div class="btn-group" id="snte-menu-font-color">
               <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="MSG-Fontcolor">
                 A
                 <span id="snte-menu-font-color-picker-indicator"></span>
                 <span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="#">MSG-Color-Red</a></li>
-                <li><a href="#">MSG-Color-Color-Blue</a></li>
-                <li><a href="#">MSG-Color-Green</a></li>
-                <li><a href="#">MSG-Color-Yellow</a></li>
+                <li><a href="#" data-value="#f00">MSG-Color-Red</a></li>
+                <li><a href="#" data-value="#00f">MSG-Color-Color-Blue</a></li>
+                <li><a href="#" data-value="#0f0">MSG-Color-Green</a></li>
+                <li><a href="#" data-value="#880">MSG-Color-Yellow</a></li>
               </ul>
             </div>
             <div class="btn-group">
