wysiwyg buggy. stop full-wysiwyg implementation here and implement different behavior: format for one textbox at a time. no different styles within a textbox.

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
       <div id="snte-chrome-top" class="menu-area">
         <div id="snte-menubar-top" class="btn-toolbar" role="toolbar">
           <div class="btn-group">
-            <button type="button" class="btn btn-default" title="MSG-Undo"><span class="glyphicon glyphicon-arrow-left"></span></button>
-            <button type="button" class="btn btn-default" title="MSG-Redo"><span class="glyphicon glyphicon-share-alt"></span></button>
+            <button type="button" class="btn btn-default" title="MSG-Undo"><span class="glyphicon glyphicon-arrow-left" id="snte-menu-undo"></span></button>
+            <button type="button" class="btn btn-default" title="MSG-Redo"><span class="glyphicon glyphicon-share-alt" id="snte-menu-redo"></span></button>
           </div>
           <div class="btn-group">
-            <button type="button" class="btn btn-default" title="MSG-Copy">C</button>
-            <button type="button" class="btn btn-default" title="MSG-Paste">P</button>
+            <button type="button" class="btn btn-default" title="MSG-Copy" id="snte-menu-copy">C</button>
+            <button type="button" class="btn btn-default" title="MSG-Paste" id="snte-menu-paste">P</button>
           </div>
           <div class="btn-group">
             <div class="btn-group" id="snte-menu-font-family">
@@ -53,8 +53,8 @@
               </ul>
             </div>
             <div class="btn-group" id="snte-menu-font-size">
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-value="10" title="MSG-Fontsize" style="min-width:55px; text-align: left;">
-                <span class="value">10</span>
+              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-value="14px" title="MSG-Fontsize" style="min-width:55px; text-align: left;">
+                <span class="value">14</span>
                 <span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
