support for comments todo: resize-handles for comment-boxes

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
               </button>
             </div>
             <div class="btn-group">
-              <button type="button" class="btn btn-default" title="MSG-Bold" id="snte-menu-font-bold" title="MSG-Bold">B</button>
-              <button type="button" class="btn btn-default" title="MSG-Italic" id="snte-menu-font-italic" title="MSG-Italic">I</button>
-              <button type="button" class="btn btn-default" title="MSG-Underline" id="snte-menu-font-underline" title="MSG-Underline">U</button>
-              <button type="button" class="btn btn-default" title="MSG-Strikethrough" id="snte-menu-font-strikethrough" title="MSG-Strikethrough">S</button>
+              <button type="button" class="btn btn-default" title="MSG-Bold" id="snte-menu-font-bold">B</button>
+              <button type="button" class="btn btn-default" title="MSG-Italic" id="snte-menu-font-italic">I</button>
+              <button type="button" class="btn btn-default" title="MSG-Underline" id="snte-menu-font-underline">U</button>
+              <button type="button" class="btn btn-default" title="MSG-Strikethrough" id="snte-menu-font-strikethrough">S</button>
             </div>
           </div>
           <div class="btn-group" id="snte-menu-add-element">
@@ -92,9 +92,16 @@
             <ul class="dropdown-menu" role="menu">
               <li><a href="#" data-item="table">MSG-Table</a></li>
               <li><a href="#" data-item="text">MSG-Text</a></li>
+              <li><a href="#" data-item="comment">MSG-Comment</a></li>
               <li><a href="#" data-item="chart">MSG-Chart</a></li>
               <li><a href="#" data-item="image">MSG-Image</a></li>
             </ul>
+          </div>
+          <div class="btn-group">
+            <button type="button" class="btn btn-default active" title="MSG-Show-Comments-On" id="snte-menu-toggle-comments">
+              <span class="glyphicon glyphicon-comment"></span>
+              <span class="value">MSG-Show-Comments-On</span>
+            </button>
           </div>
         </div>
       </div>
