improved drag n drop

--- a/index.html
+++ b/index.html
@@ -86,15 +86,16 @@
           </div>
           <div class="btn-group" id="snte-menu-add-element">
             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="MSG-New-Element">
+              <span class="glyphicon glyphicon-plus"></span>
               MSG-Add-New-Element
               <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#" data-item="table">MSG-Table</a></li>
-              <li><a href="#" data-item="text">MSG-Text</a></li>
-              <li><a href="#" data-item="comment">MSG-Comment</a></li>
-              <li><a href="#" data-item="chart">MSG-Chart</a></li>
-              <li><a href="#" data-item="image">MSG-Image</a></li>
+              <li><a href="#" data-item="table"><span class="glyphicon glyphicon-th-large"></span>MSG-Table</a></li>
+              <li><a href="#" data-item="text"><span class="glyphicon glyphicon-font"></span>MSG-Text</a></li>
+              <li><a href="#" data-item="comment"><span class="glyphicon glyphicon-comment"></span>MSG-Comment</a></li>
+              <li><a href="#" data-item="chart"><span class="glyphicon glyphicon-signal"></span>MSG-Chart</a></li>
+              <li><a href="#" data-item="image"><span class="glyphicon glyphicon-picture"></span>MSG-Image</a></li>
             </ul>
           </div>
           <div class="btn-group">
