WYSIWYG controls for tables

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <script src="assets/numeral/numeral.js"></script>
     <script src="assets/numeral/languages/de.js"></script>
     <script src="assets/jquery/jquery.jeditable.js"></script>
-    <script src="assets/jquery/jquery.selection.js"></script>
     <!--<script src="assets/jquery/handsontable/jquery.handsontable-excel.js"></script>-->
 
     <script src="js/snte.js"></script>
@@ -74,6 +73,13 @@
               <button type="button" class="btn btn-default" data-value="#000" data-default-value="#000" title="MSG-Fontcolor" id="snte-menu-font-color">
                 A
                 <span id="snte-menu-font-color-picker-indicator"></span>
+                <span class="caret"></span>
+              </button>
+            </div>
+            <div class="btn-group" id="snte-menu-fill-color-container">
+              <button type="button" class="btn btn-default" data-value="#fff" data-default-value="#fff" title="MSG-Fillcolor" id="snte-menu-fill-color">
+                F
+                <span id="snte-menu-fill-color-picker-indicator"></span>
                 <span class="caret"></span>
               </button>
             </div>
