eyecandy resizable comments

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!--<link rel="stylesheet" media="screen" href="css/ui-bootstrap/jquery-ui.custom.css">
      <link rel="stylesheet" media="screen" href="css/smoothness/jquery-ui.custom.css"> -->
+    <link rel="stylesheet" media="screen" href="assets/jquery/ui-lightness/jquery-ui-1.10.4.custom.css">
     <link rel="stylesheet" media="screen" href="assets/jquery/handsontable/jquery.handsontable.full.css">
     <link rel="stylesheet" media="screen" href="assets/bootstrap3/css/bootstrap.css">
     <!--<link rel="stylesheet" media="screen" href="assets/bootstrap2/css/bootstrap-editable.css">-->
