better drag'n'drop UI

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--<script src="assets/bootstrap2/js/bootstrap-editable.js"></script>-->
     <!--<script src="assets/bootstrap3/js/bootstrap-colorpicker.js"></script>-->
     <script src="assets/jquery/handsontable/jquery.handsontable.full.js"></script>
+    <!--<script src="assets/jquery/handsontable/jquery.handsontable-excel.js"></script>-->
     <!--<script src="js/jquery-ui.custom.min.js"></script>-->
     <script src="assets/numeral/numeral.js"></script>
     <script src="assets/numeral/languages/de.js"></script>
