--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="assets/numeral/numeral.js"></script>
     <script src="assets/numeral/languages/de.js"></script>
     <script src="assets/jquery/jquery.jeditable.js"></script>
+    <script src="assets/jquery/jquery.highlight.js"></script>
     <!--<script src="assets/jquery/handsontable/jquery.handsontable-excel.js"></script>-->
 
     <script src="js/color.js"></script>
@@ -34,12 +35,30 @@
   <body>
     <div id="snte-page">
       <div id="snte-chrome-top" class="menu-area">
+        <div id="snte-searchbox" class="snte-hidden">
+          <div id="snte-searchbox-title">
+            MSG-Search
+            <div class="snte-searchbox-resultcount"></div>
+          </div>
+          <div id="snte-searchbox-content" class="snte-hidden">
+            <div class="row" role="toolbar" style="width: 350px;">
+                <div class="col-md-7">
+                  <input type="text" class="form-control snte-menu-search-input" placeholder="MSG-Type-To-Search" />
+                </div>
+                <div class="btn-group">
+                  <button type="button" class="btn btn-default snte-menu-search-next" title="MSG-Next"><span class="glyphicon glyphicon-chevron-down"></span></button>
+                  <button type="button" class="btn btn-default snte-menu-search-prev" title="MSG-Prev"><span class="glyphicon glyphicon-chevron-up"></span></button>
+                  <button type="button" class="btn btn-default snte-menu-search-clear" title="MSG-Clear"><span class="glyphicon glyphicon-remove"></span></button>
+                </div>
+            </div>
+          </div>
+        </div>
         <div id="snte-menubar-top" class="row" role="toolbar"> <!-- class="btn-toolbar" -->
           <!--<div class="row">-->
-            <div class="col-md-10">
+            <div class="col-md-11">
               <div class="btn-group">
-                <button type="button" class="btn btn-default" title="MSG-Undo"><span class="glyphicon glyphicon-arrow-left" id="snte-menu-undo"></span></button>
-                <button type="button" class="btn btn-default" title="MSG-Redo"><span class="glyphicon glyphicon-share-alt" id="snte-menu-redo"></span></button>
+                <button type="button" class="btn btn-default" title="MSG-Undo" id="snte-menu-undo"><span class="glyphicon glyphicon-arrow-left"></span></button>
+                <button type="button" class="btn btn-default" title="MSG-Redo" id="snte-menu-redo"><span class="glyphicon glyphicon-share-alt"></span></button>
               </div>
               <div class="btn-group">
                 <button type="button" class="btn btn-default" title="MSG-Copy" id="snte-menu-copy">C</button>
@@ -65,7 +84,7 @@
                     <span class="value">13</span>
                     <span class="caret"></span>
                   </button>
-                  <ul class="dropdown-menu">
+                  <ul class="dropdown-menu dropdown-caret">
                     <li><a href="#" data-value="1"><font size="1">10</font></a></li>
                     <li><a href="#" data-value="2"><font size="2">13</font></a></li>
                     <li><a href="#" data-value="3"><font size="3">16</font></a></li>
@@ -122,15 +141,20 @@
                   <span class="glyphicon glyphicon-comment"></span>
                 </button>
               </div>
+              <div class="btn-group pull-right">
+                <button type="button" class="btn btn-default" id="snte-menu-toggle-search">
+                  <span class="glyphicon glyphicon-search"></span>
+                </button>
+              </div>
             </div>
-            <div class="col-md-2 pull-right">
+            <!--<div class="col-md-2 pull-right">
               <div class="input-group">
                 <input type="text" class="form-control" placeholder="MSG-Search">
                 <span class="input-group-btn">
                   <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
                 </span>
               </div>
-            </div>
+            </div>-->
           <!--</div>-->
         </div>
         
