fixed searchbox handles (event binding)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             MSG-Search
             <div class="snte-searchbox-resultcount"></div>
           </div>
-          <div id="snte-searchbox-content" class="snte-hidden">
+          <div id="snte-searchbox-content">
             <div class="row" role="toolbar" style="width: 350px;">
                 <div class="col-md-7">
                   <input type="text" class="form-control snte-menu-search-input" placeholder="MSG-Type-To-Search" />
@@ -70,7 +70,7 @@
                     <span class="value">Arial</span>
                     <span class="caret"></span>
                   </button>
-                  <ul class="dropdown-menu">
+                  <ul class="dropdown-menu dropdown-caret">
                     <li><a href="#" data-value="Arial" style="font-family: Arial;">Arial</a></li>
                     <li><a href="#" data-value="Courier New" style="font-family: Courier New;">Courier New</a></li>
                     <li><a href="#" data-value="Georgia" style="font-family: Georgia;">Georgia</a></li>
