finished search functionality

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="assets/numeral/languages/de.js"></script>
     <script src="assets/jquery/jquery.jeditable.js"></script>
     <script src="assets/jquery/jquery.highlight.js"></script>
+    <script src="assets/jquery/jquery.pulsate.js"></script>
     <!--<script src="assets/jquery/handsontable/jquery.handsontable-excel.js"></script>-->
 
     <script src="js/color.js"></script>
