--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <script src="assets/jquery/jquery.pulsate.js"></script>
     <!--<script src="assets/jquery/handsontable/jquery.handsontable-excel.js"></script>-->
 
+    <script src="assets/phpjs/strtotime.js"></script>
+    <script src="assets/phpjs/date.js"></script>
+
     <script src="js/color.js"></script>
     <script src="js/snte.js"></script>
 
@@ -34,6 +37,23 @@
     <link rel="stylesheet" media="screen" href="css/snte.css">
   </head>
   <body>
+    <!-- Error Message Modal 
+    <div class="modal fade" id="snte-error-modal" tabindex="-1" role="dialog" aria-labelledby="MSG-Error-Box" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+          </div>
+          <div class="modal-body">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+          </div>
+        </div>
+      </div>
+    </div>-->
+
     <div id="snte-page">
       <div id="snte-chrome-top" class="menu-area">
         <div id="snte-searchbox" class="snte-hidden">
@@ -142,12 +162,31 @@
                   <span class="glyphicon glyphicon-comment"></span>
                 </button>
               </div>
+              <div class="btn-group" id="snte-menu-cell-type">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-value="auto" title="MSG-Auto" style="min-width:150px; text-align: left;">
+                  <span class="value">MSG-Auto</span>
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-caret" style="min-width: 200px;">
+                  <li><a href="#" data-value="auto" title="MSG-Auto">MSG-Auto</a></li>
+                  <li role="presentation" class="divider" style="clear: both;"></li>
+                  <li><a href="#" data-value="text" title="MSG-Text">MSG-Text</a><span class="snte-menu-cell-type-example">xyz</span></li>
+                  <li role="presentation" class="divider" style="clear: both;"></li>
+                  <li><a href="#" data-value="numeric" title="MSG-Number">MSG-Number</a><span class="snte-menu-cell-type-example">1,000.2</span></li>
+                  <li><a href="#" data-value="percent" title="MSG-Percent">MSG-Percent</a><span class="snte-menu-cell-type-example">77.12%</span></li>
+                  <li><a href="#" data-value="currency" title="MSG-Currency">MSG-Currency</a><span class="snte-menu-cell-type-example">€1,000.2</span></li>
+                  <li role="presentation" class="divider" style="clear: both;"></li>
+                  <li><a href="#" data-value="date" title="MSG-Date">MSG-Date</a><span class="snte-menu-cell-type-example">05.04.2014</span></li>
+                  <!--<li><a href="#" data-value="time" title="MSG-Time">MSG-Time</a><span class="snte-menu-cell-type-example">12:30:00</span></li>-->
+                </ul>
+              </div>
               <div class="btn-group pull-right">
                 <button type="button" class="btn btn-default" id="snte-menu-toggle-search">
                   <span class="glyphicon glyphicon-search"></span>
                 </button>
               </div>
             </div>
+
             <!--<div class="col-md-2 pull-right">
               <div class="input-group">
                 <input type="text" class="form-control" placeholder="MSG-Search">
@@ -173,6 +212,5 @@
         </div>
       </div>
     </div>
-
   </body>
 </html>
