tooltips for top menu removed debug output

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <button type="button" class="btn btn-default" title="MSG-Textalign-Right" id="snte-menu-font-align-right"><span class="glyphicon glyphicon-align-right"></span></button>
             </div>
             <div class="btn-group" id="snte-menu-cell-type">
-              <button type="button" class="btn btn-default dropdown-toggle disabled" data-toggle="dropdown" data-value="auto" title="MSG-Auto" style="min-width:150px; text-align: left;">
+              <button type="button" class="btn btn-default dropdown-toggle disabled" data-toggle="dropdown" data-value="auto" title="MSG-Cellformat" style="min-width:150px; text-align: left;">
                 <span class="value">MSG-Auto</span>
                 <span class="caret"></span>
               </button>
@@ -182,7 +182,7 @@
             </div>
 
             <div class="btn-group">
-              <button type="button" class="btn btn-default" id="snte-menu-toggle-search">
+              <button type="button" class="btn btn-default" id="snte-menu-toggle-search" title="MSG-Search">
                 <span class="glyphicon glyphicon-search"></span>
               </button>
             </div>
