--- a/index.html
+++ b/index.html
@@ -54,6 +54,41 @@
       </div>
     </div>-->
 
+    <!-- Image Upload Modal -->
+    <div class="modal fade" id="snte-image-modal" tabindex="-1" role="dialog" aria-labelledby="MSG-Image-Upload-Box" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title">MSG-Add-Image</h4>
+          </div>
+          <div class="modal-body">
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs">
+              <li class="active"><a href="#snte-image-add-tab-upload" data-toggle="tab">MSG-Upload</a></li>
+              <li><a href="#snte-image-add-tab-link" data-toggle="tab">MSG-Online</a></li>
+            </ul>
+
+            <!-- Tab panes -->
+            <div class="tab-content">
+              <div class="tab-pane active" id="snte-image-add-tab-upload">
+                <div id="snte-image-upload-dropzone">
+                  MSG-Drop-Imagefile-Here
+                </div>
+                <div id="snte-image-upload-choosezone">
+
+                </div>
+              </div>
+              <div class="tab-pane" id="snte-image-add-tab-link">...</div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div id="snte-page">
       <div id="snte-chrome-top" class="menu-area">
         <div id="snte-searchbox" class="snte-hidden">
