more image upload

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 
                 </div>
               </div>
-              <div class="tab-pane" id="snte-image-add-tab-link">...</div>
+              <div class="tab-pane" id="snte-image-add-tab-link">
+                <input type="text" class="form-control" placeholder="MSG-Add-URL" />
+              </div>
             </div>
           </div>
           <div class="modal-footer">
