highlight active menu items in dropdowns

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu dropdown-caret">
-                  <li><a href="#" data-value="Arial" style="font-family: Arial;">Arial</a></li>
+                  <li class="active"><a href="#" data-value="Arial" style="font-family: Arial;">Arial</a></li>
                   <li><a href="#" data-value="Courier New" style="font-family: Courier New;">Courier New</a></li>
                   <li><a href="#" data-value="Georgia" style="font-family: Georgia;">Georgia</a></li>
                   <li><a href="#" data-value="Times New Roman" style="font-family: Times New Roman;">Times New Roman</a></li>
@@ -142,7 +142,7 @@
                 </button>
                 <ul class="dropdown-menu dropdown-caret">
                   <li><a href="#" data-value="1"><font size="1">10</font></a></li>
-                  <li><a href="#" data-value="2"><font size="2">13</font></a></li>
+                  <li class="active"><a href="#" data-value="2"><font size="2">13</font></a></li>
                   <li><a href="#" data-value="3"><font size="3">16</font></a></li>
                   <li><a href="#" data-value="4"><font size="4">18</font></a></li>
                   <li><a href="#" data-value="5"><font size="5">24</font></a></li>
@@ -184,7 +184,7 @@
                 <span class="caret"></span>
               </button>
               <ul class="dropdown-menu dropdown-caret" style="min-width: 200px;">
-                <li><a href="#" data-value="auto" title="MSG-Auto">MSG-Auto</a></li>
+                <li class="active"><a href="#" data-value="auto" title="MSG-Auto">MSG-Auto</a></li>
                 <li role="presentation" class="divider" style="clear: both;"></li>
                 <li><a href="#" data-value="text" title="MSG-Text">MSG-Text</a><span class="snte-menu-cell-type-example">xyz</span></li>
                 <li role="presentation" class="divider" style="clear: both;"></li>
@@ -213,14 +213,14 @@
             </div>
 
             <div class="btn-group">
-              <button type="button" class="btn btn-default active" title="MSG-Show-Comments-On" id="snte-menu-toggle-comments">
-                <span class="glyphicon glyphicon-comment"></span>
+              <button type="button" class="btn btn-default" id="snte-menu-toggle-search" title="MSG-Search">
+                <span class="glyphicon glyphicon-search"></span>
               </button>
             </div>
 
             <div class="btn-group">
-              <button type="button" class="btn btn-default" id="snte-menu-toggle-search" title="MSG-Search">
-                <span class="glyphicon glyphicon-search"></span>
+              <button type="button" class="btn btn-default active" title="MSG-Show-Comments-On" id="snte-menu-toggle-comments">
+                <span class="glyphicon glyphicon-comment"></span>
               </button>
             </div>
 
