fixed searchbox title bug

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             </div>
 
             <div class="btn-group">
-              <button type="button" class="btn btn-default" id="snte-menu-toggle-search" title="MSG-Search">
+              <button type="button" class="btn btn-default" id="snte-menu-toggle-search">
                 <span class="glyphicon glyphicon-search"></span>
               </button>
             </div>
