removed left toolbar (not needed for now) made workspace full window-size

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
           </div>
         </div>
-        <div id="snte-menubar-top" class="btn-toolbar" role="toolbar"> <!-- class="btn-toolbar" -->
+        <div id="snte-menubar-top" class="btn-toolbar" role="toolbar">
             <div class="btn-group">
               <button type="button" class="btn btn-default" title="MSG-Undo" id="snte-menu-undo"><span class="glyphicon glyphicon-arrow-left"></span></button>
               <button type="button" class="btn btn-default" title="MSG-Redo" id="snte-menu-redo"><span class="glyphicon glyphicon-share-alt"></span></button>
@@ -227,7 +227,11 @@
         </div>
         
       </div>
-      <div id="snte-main">
+      <div id="snte-workspace-container">
+        <div id="snte-workspace">
+        </div>
+      </div>
+      <!--<div id="snte-main">
         <div id="snte-chrome-left" class="menu-area">
           <div id="snte-menu-left">
             <h1>MSG-Object-Properties</h1>
@@ -238,7 +242,7 @@
           <div id="snte-workspace">
           </div>
         </div>
-      </div>
+      </div>-->
     </div>
   </body>
 </html>
