table controls for adding rows and columns

--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
     <!--<script src="assets/bootstrap3/js/bootstrap-colorpicker.js"></script>-->
     <script src="assets/jquery/handsontable/jquery.handsontable.full.js"></script>
     <script src="assets/jquery/handsontable/jquery.handsontable-excel.js"></script>
-    <!--<script src="js/jquery-ui.custom.min.js"></script>-->
-    <script src="assets/numeral/numeral.js"></script>
+
+    <!--<script src="assets/numeral/numeral.js"></script>-->
     <script src="assets/numeral/languages/de.js"></script>
     <script src="assets/jquery/jquery.jeditable.js"></script>
     <script src="assets/jquery/jquery.highlight.js"></script>
     <script src="assets/jquery/jquery.pulsate.js"></script>
-    <!--<script src="assets/jquery/handsontable/jquery.handsontable-excel.js"></script>-->
 
     <script src="assets/phpjs/strtotime.js"></script>
     <script src="assets/phpjs/date.js"></script>
@@ -35,6 +34,8 @@
     <!--<link rel="stylesheet" media="screen" href="assets/bootstrap3/css/bootstrap-colorpicker.css">
     <link rel="stylesheet" media="screen" href="assets/bootstrap3/css/bootstrap-colorselector.css">-->
     <link rel="stylesheet" media="screen" href="css/snte.css">
+
+    <link href='http://fonts.googleapis.com/css?family=Gilda+Display' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <!-- Error Message Modal 
@@ -112,6 +113,7 @@
           </div>
         </div>
         <div id="snte-menubar-top" class="btn-toolbar" role="toolbar">
+            <div id="snte-logo" title="say no to excel!">snte</div>
             <div class="btn-group">
               <button type="button" class="btn btn-default" title="MSG-Undo" id="snte-menu-undo"><span class="glyphicon glyphicon-arrow-left"></span></button>
               <button type="button" class="btn btn-default" title="MSG-Redo" id="snte-menu-redo"><span class="glyphicon glyphicon-share-alt"></span></button>
@@ -231,18 +233,6 @@
         <div id="snte-workspace">
         </div>
       </div>
-      <!--<div id="snte-main">
-        <div id="snte-chrome-left" class="menu-area">
-          <div id="snte-menu-left">
-            <h1>MSG-Object-Properties</h1>
-            <div id="snte-menu-left-empty">MSG-No-Element-Selected</div>
-          </div>
-        </div>
-        <div id="snte-workspace-container">
-          <div id="snte-workspace">
-          </div>
-        </div>
-      </div>-->
     </div>
   </body>
 </html>
