--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>say-no-to-excel</title>
+    <title>say no to excel!</title>
     <script src="assets/jquery/jquery-2.1.0.js"></script>
     <script src="assets/jquery/jquery-ui-1.10.4.custom.js"></script>
     <script src="assets/bootstrap3/js/bootstrap.js"></script>
@@ -15,7 +15,7 @@
 
     <!--<script src="assets/numeral/numeral.js"></script>-->
     <script src="assets/numeral/languages/de.js"></script>
-    
+
     <script src="assets/jquery/jquery.highlight.js"></script>
     <script src="assets/jquery/jquery.pulsate.js"></script>
 
@@ -114,6 +114,12 @@
         </div>
         <div id="snte-menubar-top" class="btn-toolbar" role="toolbar">
             <div id="snte-logo" title="say no to excel!">snte</div>
+            <div id="snte-version">v0.1-alpha</div>
+            <div class="btn-group">
+              <button type="button" class="btn btn-default" title="MSG-New-Worksheet" id="snte-menu-new-worksheet"><span class="glyphicon glyphicon-file"></span></button>
+              <button type="button" class="btn btn-default" title="MSG-Open-Worksheet" id="snte-menu-open-worksheet"><span class="glyphicon glyphicon-folder-open"></span></button>
+              <button type="button" class="btn btn-default" title="MSG-Save-Worksheet" id="snte-menu-save-worksheet"><span class="glyphicon glyphicon-floppy-disk"></span></button>
+            </div>
             <div class="btn-group">
               <button type="button" class="btn btn-default" title="MSG-Undo" id="snte-menu-undo"><span class="glyphicon glyphicon-arrow-left"></span></button>
               <button type="button" class="btn btn-default" title="MSG-Redo" id="snte-menu-redo"><span class="glyphicon glyphicon-share-alt"></span></button>
