fixed bugs from usertesting of v0.1

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
     </div>
 
-    <div id="snte-page">
+    <!--<div id="snte-page">-->
       <div id="snte-chrome-top" class="menu-area">
         <div id="snte-searchbox" class="snte-hidden">
           <div id="snte-searchbox-title">
@@ -196,9 +196,9 @@
                 <li role="presentation" class="divider" style="clear: both;"></li>
                 <li><a href="#" data-value="text" title="MSG-Text">MSG-Text</a><span class="snte-menu-cell-type-example">xyz</span></li>
                 <li role="presentation" class="divider" style="clear: both;"></li>
-                <li><a href="#" data-value="numeric" title="MSG-Number">MSG-Number</a><span class="snte-menu-cell-type-example">1,000.2</span></li>
-                <li><a href="#" data-value="percent" title="MSG-Percent">MSG-Percent</a><span class="snte-menu-cell-type-example">77.12%</span></li>
-                <li><a href="#" data-value="currency" title="MSG-Currency">MSG-Currency</a><span class="snte-menu-cell-type-example">€1,000.2</span></li>
+                <li><a href="#" data-value="numeric" title="MSG-Number">MSG-Number</a><span class="snte-menu-cell-type-example">1.000,2</span></li>
+                <li><a href="#" data-value="percent" title="MSG-Percent">MSG-Percent</a><span class="snte-menu-cell-type-example">77,12%</span></li>
+                <li><a href="#" data-value="currency" title="MSG-Currency">MSG-Currency</a><span class="snte-menu-cell-type-example">€1.000,2</span></li>
                 <li role="presentation" class="divider" style="clear: both;"></li>
                 <li><a href="#" data-value="date" title="MSG-Date">MSG-Date</a><span class="snte-menu-cell-type-example">05.04.2014</span></li>
                 <!--<li><a href="#" data-value="time" title="MSG-Time">MSG-Time</a><span class="snte-menu-cell-type-example">12:30:00</span></li>-->
@@ -231,14 +231,12 @@
                 <span class="glyphicon glyphicon-comment"></span>
               </button>
             </div>
-
-        </div>
-        
-      </div>
-      <div id="snte-workspace-container">
-        <div id="snte-workspace">
         </div>
       </div>
-    </div>
+      <div id="snte-workspace">
+        <!--<div id="snte-workspace">
+        </div>-->
+      </div>
+    <!--</div>-->
   </body>
 </html>
