"start here" tooltip when workspace is empty

--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
         </div>
       </div>
     </div>
+    <!-- End Image Upload Modal -->
 
     <div id="snte-chrome-top" class="menu-area">
+      <!-- Searchbox -->
       <div id="snte-searchbox" class="snte-hidden">
         <div id="snte-searchbox-title">
           MSG-Search
@@ -111,6 +113,21 @@
           </div>
         </div>
       </div>
+      <!-- End Searchbox -->
+
+      <!-- "Start Here" Help -->
+      <!--<div id="snte-starthere" class="snte-hidden">
+        <div id="snte-starthere-title">
+          MSG-Start-Here
+        </div>
+        <div id="snte-starthere-content">
+          <div class="row">
+              MSG-Start-Here-By-Adding-The-First-Element-To-Your-Workspace
+          </div>
+        </div>
+      </div>-->
+      <!-- End "Start Here" Help -->
+
       <div id="snte-menubar-top" class="btn-toolbar" role="toolbar">
           <div id="snte-logo" title="say no to excel!">snte</div>
           <div id="snte-version">v0.1-alpha</div>
