ordered and unordered lists for textfields and comments

--- a/index.html
+++ b/index.html
@@ -202,6 +202,10 @@
             <button type="button" class="btn btn-default" title="MSG-Textalign-Center" id="snte-menu-font-align-center"><span class="glyphicon glyphicon-align-center"></span></button>
             <button type="button" class="btn btn-default" title="MSG-Textalign-Right" id="snte-menu-font-align-right"><span class="glyphicon glyphicon-align-right"></span></button>
           </div>
+          <div class="btn-group">
+            <button type="button" class="btn btn-default disabled" title="MSG-Unordered-List" id="snte-menu-unordered-list">UL<!--<span class="glyphicon glyphicon-list"></span>--></button>
+            <button type="button" class="btn btn-default disabled" title="MSG-Ordered-List" id="snte-menu-ordered-list">OL<!--<span class="glyphicon glyphicon-list"></span>--></button>
+          </div>
           <div class="btn-group" id="snte-menu-cell-type">
             <button type="button" class="btn btn-default dropdown-toggle disabled" data-toggle="dropdown" data-value="auto" title="MSG-Cellformat" style="min-width:150px; text-align: left;">
               <span class="value">MSG-Auto</span>
