i18n messages for EN
number and date formatting fixed

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           </div>
 
           <div class="btn-group">
-            <button type="button" class="btn btn-default active" id="snte-menu-toggle-comments" title="" data-i18n="[title]chrome.hide-comments">
+            <button type="button" class="btn btn-default active" id="snte-menu-toggle-comments" title="" data-i18n="[title]chrome.toggle-comments">
               <span class="glyphicon glyphicon-comment"></span>
             </button>
           </div>
